Ajout des propriétées css pour la div .activites-cards pour mettre le contenue en colonne en fixant la hauteur à 439px avec hauteur et 297.5px pour la largeur avec overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ a {
     display: flex;
     flex-direction: column;
     height: 439px;
-    width: auto;
+    width: 297.5px;
     overflow: hidden;
 }
 
